# ha_boss

./: .dockerignore  .env.example  .env.example.multi-instance  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  LICENSE  Makefile  README.md  SETUP_GUIDE.md  UAT_COMPLETE_TEST_RESULTS.md  UAT_TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: GITHUB_MCP_SETUP.md  README.md  mcp.json  mcp.json.example  settings.json
.claude/commands/: add-test.md  ci-check.md  fix-style.md  lint.md  review-pr.md  setup-dev.md  test-file.md  test.md  uat.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  ci_failure.yml  config.yml  documentation.yml  feature_request.yml  integration_issue.yml  performance_issue.yml
.github/ISSUE_TEMPLATES/: epic-25-phase2.md  issue-26-database-schema.md  issue-27-pattern-collector.md  issue-28-reliability-tracking.md  issue-29-cli-reports.md  issue-30-service-integration.md  issue-31-testing.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docker-publish.yml  security.yml
.omc/: continuation-count.json
.omc/plans/: phase-2-entity-device-healing.md
.omc/state/: subagent-tracking.json
addon/: README.md
config/: config-dev.yaml  config-minimal.yaml  config-multi-instance.yaml  config-production.yaml  config.yaml  config.yaml.example  mcp_config.yaml.example
docs/: AI_FEATURES.md  AUTOMATION_REFACTORING_PLAN.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  INSTANCE_AUTHORIZATION_ANALYSIS.md  LLM_SETUP.md
docs/wiki/: AI-Features.md  Architecture.md  Auto-Discovery.md  CLI-Commands.md  Configuration.md  Dashboard.md  Development.md  Home.md  Installation.md  REST-API.md  (+3 more)
ha_boss/: __init__.py
ha_boss_mcp/: README.md  pyproject.toml
ha_boss_mcp/ha_boss_mcp/: __init__.py  config.py  models.py  server.py
ha_boss_mcp/ha_boss_mcp/clients/: __init__.py  db_reader.py  haboss_api.py
ha_boss_mcp/ha_boss_mcp/tools/: __init__.py  automations.py  healing.py  monitoring.py  patterns.py  service.py
ha_boss_mcp/tests/: __init__.py
ha_boss_mcp/tests/mcp/: conftest.py  test_tools_monitoring.py
tests/: __init__.py  test_basic.py  test_integration.py  test_integration_patterns.py
(+181 files in other folders)
